# calligraph

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CITATION  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_mkdocs.txt
.github/workflows/: pre-release.yml  release.yml
docs/reference/: cli.md
src/calligraph/: __init__.py  cli.py  core.py  geo.py  pages.py  plot.py  ui.py
src/calliopevis/: __init__.py  cli.py  core.py  geo.py  pages.py  plot.py  ui.py
src/cview/: __init__.py  cli.py  core.py  geo.py  pages.py  plot.py  ui.py
