[tool.black]
line-length = 88
skip-magic-trailing-comma = true
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | _build
  | build
  | dist
  | .*\.egg-info
)/
'''

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "Q", "W"]
# line too long; Black will handle these
ignore = ["E501"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

# Ignore `E402` (import violations) and `F401` (unused imports) in all `__init__.py` files
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pycodestyle]
max-doc-length = 200
ignore-overlong-task-comments = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["calligraph*"]

[tool.setuptools.package-data]
calligraph = []

[tool.setuptools]
license-files = ["LICENSE", "CITATION"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "calligraph"
authors = [
  { name = "Stefan Pfenninger", email = "stefan@pfenninger.org" },
]
maintainers = [
  { name = "Stefan Pfenninger", email = "stefan@pfenninger.org" },
  { name = "Bryn Pickering", email = "17178478+brynpickering@users.noreply.github.com" },
]
description = "Visualisation tool for Calliope."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["energy systems", "visualisation"]
license = { text = "Apache 2.0" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "calligraph.__init__.__version__" }

[project.scripts]
calligraph = "calligraph.cli:calligraph_cli"

[project.urls]
website = "https://www.callio.pe/"
repository = "https://github.com/calliope-project/calligraph"
changelog = "https://github.com/calliope-project/calligraph/CHANGELOG.md"
